[BEAM-2530] Add a java 9 profile to parent pom